syntax = "proto3";
package zetachain.zetacore.zetacore;

option go_package = "github.com/zeta-chain/zetacore/x/zetacore/types";

import "gogoproto/gogo.proto";

enum SendStatus {
  option (gogoproto.goproto_enum_stringer) = true;
  PendingInbound = 0; // some observer sees inbound tx
  PendingOutbound = 1; // super majority observer see inbound tx
  OutboundMined = 2;  // the corresponding outbound tx is mined
  Confirmed = 3; // NOT USED CURRENTLY
  PendingRevert = 4; // outbound cannot succeed; should revert inbound
  Reverted =5; // inbound reverted.
  Aborted = 6; // inbound tx error or invalid paramters and cannot revert; just abort
}

message Send {
  string creator = 1;
  string index = 2;
  string sender = 3; 
  string senderChain = 4;
  string receiver = 5; 
  string receiverChain = 6;
  string zetaBurnt = 7;
  string zetaMint = 8;
  string message = 9; 
  string inTxHash = 10; 
  uint64 inBlockHeight = 11;
  uint64 finalizedMetaHeight = 12;
  repeated string signers = 13;
  SendStatus status = 14;
  uint64 broadcaster = 15;
  uint64 nonce = 16;
  string gasPrice = 17;
  string statusMessage = 18;
  string recvHash = 19;
  int64  indexTxList = 20;
  string outTxHash = 21;
  int64  lastUpdateTimestamp = 22;
  uint64 gasLimit = 23;
}
